# cfl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/cfl/: cfl.h  cfl_array.h  cfl_hash.h  cfl_kv.h  cfl_kvlist.h  cfl_list.h  cfl_log.h  cfl_variant.h
src/: CMakeLists.txt  cfl.c  cfl_array.c  cfl_kv.c  cfl_kvlist.c  cfl_log.c  cfl_time.c  cfl_variant.c
tests/: CMakeLists.txt  kv.c  list.c
